# apps/api/src/app.module.ts
@@ -4,6 +4,7 @@ import { MongooseModule } from "@nestjs/mongoose";
 import { AuthModule } from "@thallesp/nestjs-better-auth";
 import { AiModule } from "./ai/ai.module";
 import { auth } from "./auth";
+import { ConversationsModule } from "./conversations/conversations.module";
 import { MeController } from "./me/me.controller";
 import { MindmapsModule } from "./mindmaps/mindmaps.module";
 
@@ -15,6 +16,7 @@ import { MindmapsModule } from "./mindmaps/mindmaps.module";
     ),
     AuthModule.forRoot({ auth }),
     MindmapsModule,
+    ConversationsModule,
     AiModule,
   ],
   controllers: [MeController],
